fixing white spaces

--- a/style.css
+++ b/style.css
@@ -81,13 +81,13 @@ body {
 .intro {
 	width: 55%;
 	margin: auto;
-	padding-top: 65px;
+	padding-top: 115px;
 	line-height: 190%;
 }
 
 .intro p {
 	text-align: center;
-	font-size: 18px;
+	font-size: 22px;
 	padding: 5px;
 	/*background-color: rgba(0, 0, 0, 0.2);*/
 }
@@ -204,7 +204,7 @@ body {
 .first_page_body {
 	width: 55%;
 	margin: auto;
-	padding-top: 40px;
+	padding-top: 50px;
 }
 
 /*################   SECOND SUB   ####################*/
@@ -417,6 +417,10 @@ body {
 	font-size: 18px;
 }
 
+.bibliography {
+	padding-top: 60px;
+}
+
 .bib_content {
 	width:55%;
 	margin: auto;
@@ -473,11 +477,85 @@ hr {
 	margin-right: auto;
 }
 
-/*################   Carousel 3   #####################*/
-
-
 
 /*######################################################################################*/
 /*				                        D3                                               */
 /*######################################################################################*/
 
+
+#viz1 {
+  width: 1000px;
+  height: 600px;
+  margin: auto;
+  background-color: #white;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+  font-size: 12px;
+}
+
+text.title1 {
+  font-size: 19px;
+  font-weight: 600;
+}
+
+text.title-subtitle1 {
+  font-size: 15px;
+}
+
+text.label1 {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.axis1 line{
+stroke: #706f6f;
+stroke-width: 0.5;
+shape-rendering: crispEdges;
+}
+
+.axis1 path {
+stroke: #706f6f;
+stroke-width: 0.7;
+shape-rendering: crispEdges;
+}
+
+.axis1 text {
+fill: #2b2929;
+font-family: 'Roboto', sans-serif;
+font-size: 100%;
+}
+
+path {
+fill: none;
+stroke: #ed3700;
+}
+
+path.line-01 {
+fill: none;
+stroke: #13f2a4;
+stroke-dasharray: 3;
+stroke-width: 3;
+}
+
+path.line-11 {
+fill: none;
+stroke: #dba5e8;
+stroke-width: 3;
+}
+
+
+path {
+  stroke: gray;
+}
+
+.grid1 path {
+  stroke-width: 0;
+}
+
+.grid11 .tick1 line {
+  stroke: #9FAAAE;
+  stroke-opacity: 0.3;
+}
